kubernetes/jenkins/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins
  namespace: ci
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ci-jenkins
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: ci-jenkins-oidc-proxy
        image: 320464205386.dkr.ecr.us-west-2.amazonaws.com/mozilla.oidc.accessproxy:latest
        ports:
          - containerPort: 80
      - name: ci-jenkins
        image: jenkins/jenkins:lts
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 50000
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-home
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
      volumes:
      - name: jenkins-home
        persistentVolumeClaim:
          claimName: ci-jenkins-master-pvc
