kubernetes/jenkins/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jenkins-oidc-proxy
  namespace: ci
spec:
  type: NodePort
  selector:
    app: ci-jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
